cvent.com (archived on 2010-10-02)
{
  "alexa_rank": 9567,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 7584,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.81,
  "homepage_snapshot_redirected_domain": "cvent.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20101006193517id_/http://www.cvent.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20101006193517id_/http%3A//cvent.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "cvent.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20101002143235id_/http%3A//www.cvent.com/en/privacy-policy.shtml",
  "policy_title": "Privacy Policy | Cvent",
  "policy_url": "cvent.com/en/privacy-policy.shtml",
  "sha1": "74901cc6540bc082a6810996174aeb65af600ce7",
  "simhash": 13387730792868680003,
  "simhash_updated": true,
  "site_hostname": "cvent.com",
  "site_url": "http://cvent.com",
  "smog": 15.07,
  "strict_updated": true,
  "timestamp": "20101002143235",
  "word_count": 1164,
  "year": 2010
}

--- a/c/cv/cve/cvent.com.html
+++ b/c/cv/cve/cvent.com.html
@@ -1,16 +1,21 @@
-<!--The following is the downloaded HTML source of the cvent.com privacy policy that was archived on 2010-05-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100522033247id_/http%3A//www.cvent.com/privacy-policy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cvent.com privacy policy that was archived on 2010-10-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20101002143235id_/http%3A//www.cvent.com/en/privacy-policy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en"><head>
 	<title>Privacy Policy | Cvent</title>
 	<meta name="description" content="Privacy Policy for Cvent, Inc.">
 	<meta name="keywords" content="cvent, privacy policy, terms of use, terms of service, trademark, copyright">
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<link href="/assets/css/main.css" rel="stylesheet" type="text/css">
-<script src="https://rs.instantservice.com/resources/smartbutton/7497/II3_Servers.js?src=ii3&amp;ts=1580471335" type="text/javascript" defer="" id="II3_Servers.js"></script><script src="https://gs.instantservice.com/geoipAPI.js?src=ii3&amp;ts=1580471335" type="text/javascript" defer="" id="geoipAPI.js"></script></head>
-<body class="blankPage">
+	<link rel="stylesheet" href="assets/css/global.css" type="text/css">
+	<link href="assets/css/print-tos.css" rel="stylesheet" type="text/css" media="print">
+	<link rel="stylesheet" href="assets/sifr3/sifr.css" type="text/css">
+	<link rel="stylesheet" href="assets/css/tou.css" type="text/css">
+	<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="assets/sifr3/sifr.js" type="text/javascript"></script>
+<script src="https://rs.instantservice.com/resources/smartbutton/7497/II3_Servers.js?src=ii3&amp;ts=1580471336" type="text/javascript" defer="" id="II3_Servers.js"></script><script src="https://gs.instantservice.com/geoipAPI.js?src=ii3&amp;ts=1580471336" type="text/javascript" defer="" id="geoipAPI.js"></script></head>
+<body id="tos" class="blankPage">
 <h1>Privacy Policy</h1>
-	<p class="pdf"><img src="http://www.cvent.com/images/adobe-acrobat.gif" alt="Download Adobe PDF" width="10" height="10"> (<a href="http://www.cvent.com/pdf/privacy-policy.pdf" target="_blank">Downloadable PDF</a>)</p>
+	<p class="pdf"><img src="/en/images/adobe-acrobat-file-18-18.gif" alt="Download Adobe PDF" width="18" height="18" class="img-pad-rt float-left"> (<a href="/en/pdf/privacy-policy.pdf" target="_blank">Downloadable PDF</a>)</p>
+	<p class="clearer">&nbsp;</p>
 	<p>Cvent, Inc. (sometimes referred to as "Cvent") respects individual privacy and values the confidence of its  customers, shareholders, employees, vendors, users and business partners. Not  only does Cvent strive to collect, use, and disclose personally identifiable information (Personal Information) in a manner consistent with the laws of the  countries in which it does business, but it also has a tradition of upholding  the highest ethical standards in its business practices. Cvent abides by the Safe Harbor Principles developed by the U.S. Department of Commerce and the European  Commission.</p>
 	<p> This Privacy Policy sets forth the privacy principles that Cvent follows with respect to collection, usage and transfer of Personal Information anywhere in the world, including transfers from the European Union (EU) to the United States.</p>
 <h2>Definitions</h2>
@@ -18,34 +23,34 @@
 	<p>"Cvent"  means Cvent, Inc. its predecessors, successors, subsidiaries, divisions and groups.</p>
 	<p>“Personal  Information” means any set of information that identifies or could be used to  identify an individual. Personal Information does not include information that  is encoded or publicly available information not combined with private Personal  Information.</p>
 	<p>“User”  means any user of the Cvent application, including Cvent customers and their  guests who may register or respond to Cvent Events, Surveys or Requests For  Proposals (RFPs). “Planner(s)” will refer to Cvent’s customer(s), solely.</p>
-<h3>Our Service</h3>
+<h2>Our Service</h2>
 	<p>Cvent licenses three (3) software product solutions referred to as: (i) the  Supplier Network (ii) Event Product, and (iii) Survey Product. These solutions may also be referenced in this Privacy Policy and other collateral as System, Tool, Product, Service, Solution, Application and other derivations thereof. Cvent users are subject to the terms only for the product solution they use or  purchase.</p>
-<h4>Notice</h4>
+<h2>Notice</h2>
 	<p>Cvent will not disclose or share Personal Information collected on its web  site with any third party, except as required by law and/or pursuant to a governmental request, or as necessary to provide services to support its  software solutions. For example, Cvent may pass Personal Information to Cvent  business partners necessary to process online/ecommerce payments and travel  related reservations. Cvent never has, and never will, use information  collected by it’s customers via the Cvent system for any purposes other than  those specifically designated by its customers.</p>
 	<p>Aggregate Data. Cvent may share reports with third parties based on  aggregated data of it’s users ("Aggregated User Data"). Aggregated User Data does not include any  Personal Information about users and is aggregated for the purposes of determining successful application benchmarks and other similar activities.</p>
 	<p>Event Registration. Cvent customers may invite guests to register for events created in the Cvent application. If a user/guest chooses to register  for an event and provides Personal Information during registration, that  information is transferred to the event Planner and event Planner’s  organization. Similarly, survey  responses submitted will be presented to Planner after submission. Any information collected by Cvent on behalf of a customer is owned in its entirety  by the customer. Cvent is not responsible for the privacy practices of its customers.</p>
-	<p>Special Circumstances. Cvent may disclose Personal Information when it has  reason to believe that disclosing such information is necessary to identify,  contact or bring legal action against someone who is violating Cvent’s <a href="http://www.cvent.com/terms-of-use.html">Terms of Use</a> or may be  causing injury to or interference with other Cvent users or anyone else who could be harmed by such activities.</p>
+	<p>Special Circumstances. Cvent may disclose Personal Information when it has  reason to believe that disclosing such information is necessary to identify,  contact or bring legal action against someone who is violating Cvent’s <a href="http://www.cvent.com/en/terms-of-use.shtml">Terms of Use</a> or may be  causing injury to or interference with other Cvent users or anyone else who could be harmed by such activities.</p>
 	<p>Cookies. A cookie is a small data file written to a user’s hard drive when  a website is accessed. Cookies are used for authenticating, session tracking,  and maintaining specific information about users, such as site preferences. A  cookie cannot read or access other cookies or any data from a user’s hard  drive. Cvent uses cookies to save usernames in order to minimize data entry and  for general ease of use. Cookies are also used to to "time-out" user sessions that are idle for an extended period of time.</p>
 	<p>IP Addresses. Cvent may use user IP addresses to diagnose problems with  Cvent servers and to administer the Cvent application.</p>
-<h5>Choice</h5>
+<h2>Choice</h2>
 	<p>Cvent users may choose  whether or not to submit Personal Information while using Cvent’s services. In some cases, Cvent’s customers require Pesonal Information from their guests. In such cases, choosing to withhold PersonalInformation, may limit a user’s ability to use all of Cvent’s services.</p>
-<h6>Security</h6>
+<h2>Security</h2>
 	<p>Cvent has security measures in place to protect  against the loss, misuse and alteration of information under its control. Cvent  protects secure data with industry-standard firewall and password protection  systems. Cvent periodically reviews and improves its security and privacy  policies as necessary. Only pre-authorized individuals have access to Cvent  servers and information provided by its users.</p>
-	<p class="header">Data Integrity</p>
+	<h2>Data Integrity</h2>
 	<p>Cvent will use Personal Information only in ways  that are compatible with the purposes for which it was collected or subsequently authorized by the individual.  Reasonable steps will be taken to ensure that Personal Information is  relevant accurate, complete and current, to its intended use.</p>
-	<p class="header">Access and  Correction</p>
+	<h2>Access and  Correction</h2>
 	<p>Cvent users may change or modify previously  submitted Personal Information by (i) using the User Profile Manager within the "My Account" section of the Cvent application or (ii) sending an email request to <a href="mailto:customercare@cvent.com">customercare@cvent.com</a>.</p>
 	<p>Please note that no data transmission over the Internet is infallible. Any information transmitted through the Cvent application is done at the user’s own risk. Once Cvent receives the information, it will take every reasonable precaution to ensure its security.</p>
-	<p class="header">Enforcement</p>
+	<h2>Enforcement</h2>
 	<p>Cvent will conduct compliance audits of its relevant privacy practices to verify adherence to this Privacy Policy and the US Department of Commerce Safe Harbor Principles. Any employee that Cvent determines is in violation of this Privacy Policy will be subject to disciplinary action up to and including termination of employment.</p>
-	<p class="header">Supplier Network</p>
+	<h2>Supplier Network</h2>
 	<p>When a Cvent user submits an RFP to a property or service provider listed on the Supplier Network, Cvent will contact the applicable supplier and disclose information necessary to submit the RFP, which may contain Personal Information. Cvent suppliers will not have access to the Cvent user’s address book or information collected through the Cvent Event or Survey Products.</p>
-	<p class="header">Web Site Links</p>
+	<h2>Web Site Links</h2>
 	<p>Cvent contains links to other web sites. Cvent is not responsible for the privacy practices or content of these web sites.</p>
-	<p class="header">Notification of Changes</p>
+	<h2>Notification of Changes</h2>
 	<p>As this Privacy Policy may be amended from time to time, please check back periodically to review any changes. The last modified date will be provided at the bottom of the page.</p>
 	<p class="sm">Last Modified: June 3, 2009</p>	
-	<p class="header">Contact Us</p>
+	<h2>Contact Us</h2>
 	<p>Cvent does everything it can to protect the privacy of its users. For questions about this Privacy Policy, the practices of this site, or dealings with this site, please contact Cvent at:</p>
 	<p><strong>Cvent</strong><br>
   	Privacy Representation <br>
@@ -60,25 +65,17 @@ Washington, DC  20036-5624<br>
 	<a href="mailto:safeharbor@the-dma.org">safeharbor@the-dma.org</a><br>
   <a href="http://www.dmaresponsibility.org/SafeHarbor/consumers.shtml" target="_blank" rel="nofollow">http://www.dmaresponsibility.org/SafeHarbor/consumers.shtml</a></p>
 	<p class="static-footer">Copyright © 2000-2010 All rights reserved</p>
-	<!-- START OF Eloqua -->
-<script type="text/javascript" language="JavaScript" src="/assets/elqNow/elqCfg.js"></script>
-<script type="text/javascript" language="JavaScript" src="/assets/elqNow/elqImg.js"></script>
-<!-- END OF Eloqua -->
-
-
-<!-- START OF Google Analytics -->
+	<!-- Start Quantcast tag -->
 <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-164433-1");
-pageTracker._trackPageview();
-} catch(err) {}
+_qoptions={
+qacct:"p-52N_YbZsS8e0c"
+};
 </script>
-<!-- END OF Google Analytics -->
-
+<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
+<noscript>
+<img src="http://pixel.quantserve.com/pixel/p-52N_YbZsS8e0c.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/>
+</noscript>
+<!-- End Quantcast tag -->
 
 <!-- START OF SmartSource Data Collector TAG -->
 <!-- Copyright (c) 1996-2007 WebTrends Inc.  All rights reserved. -->
@@ -127,15 +124,31 @@ var DCSext={};
 var dcsInit=new DcsInit();
 //]]>>
 </script><script type="text/javascript" src="https://wt.cvent.com/dcshhdauy00000got3zl9xr9t_4g5d/wtid.js"></script>
-<script src="/assets/js/wtbase.js" type="text/javascript"></script>
+<script src="/en/assets/js/wtbase.js" type="text/javascript"></script>
 <noscript>
 <div><img alt="DCSIMG" id="DCSIMG" width="1" height="1" src="http://wt.cvent.com/dcshhdauy00000got3zl9xr9t_4g5d/njs.gif?dcsuri=/nojavascript&amp;WT.js=No&amp;WT.tv=1.0.7"/></div>
 </noscript>
 <!-- END OF SmartSource Data Collector TAG -->
 
+<!-- START OF Google Analytics -->
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-164433-1']);
+  _gaq.push(['_setDomainName', '.cvent.com']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+<!-- END OF Google Analytics -->
 
 <!-- START OF InstantInvite Chat -->
-<script type="text/javascript" src="/assets/js/InstantInvite3.js"></script><div id="invitelayer" style="position:absolute;left:10px;top:10px;visibility:hidden;z-index:1000;"><div id="invitelayercontent" style="position:relative;left:0px;top:0px;z-index:100">&nbsp;</div><!--[if lte IE 6]><iframe id="divshim" src="javascript:'&lt;html&gt;&lt;/html&gt;'" scrolling="no" frameborder="0" style="position:absolute;top:0px;left:0px;display:none;"></iframe><![endif]--></div>
+<script type="text/javascript" src="/en/assets/js/InstantInvite3.js"></script><div id="invitelayer" style="position:absolute;left:10px;top:10px;visibility:hidden;z-index:1000;"><div id="invitelayercontent" style="position:relative;left:0px;top:0px;z-index:100">&nbsp;</div><!--[if lte IE 6]><iframe id="divshim" src="javascript:'&lt;html&gt;&lt;/html&gt;'" scrolling="no" frameborder="0" style="position:absolute;top:0px;left:0px;display:none;"></iframe><![endif]--></div>
 <!-- END OF SmartSource Data Collector TAG -->
 
 
@@ -157,5 +170,12 @@ var google_conversion_value = 0;
 </div>
 </noscript>
 <!-- END OF Google Remarketing List -->
+<!-- START OF Eloqua -->
+<script type="text/javascript" language="JavaScript" src="/en/assets/elqNow/elqCfg.js"></script>
+<script type="text/javascript" language="JavaScript" src="/en/assets/elqNow/elqImg.js"></script>
+
+<!-- END OF Eloqua -->
+
+
 
 </body></html>
