--- a/s/se/seq/seqlegal.com.html
+++ b/s/se/seq/seqlegal.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the seqlegal.com privacy policy that was archived on 2016-02-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160210151024id_/http%3A//www.seqlegal.com/our-privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the seqlegal.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606014510id_/http%3A//www.seqlegal.com/our-privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" version="XHTML+RDFa 1.0" dir="ltr" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:dc="http://purl.org/dc/terms/" xmlns:foaf="http://xmlns.com/foaf/0.1/" xmlns:og="http://ogp.me/ns#" xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#" xmlns:sioc="http://rdfs.org/sioc/ns#" xmlns:sioct="http://rdfs.org/sioc/types#" xmlns:skos="http://www.w3.org/2004/02/skos/core#" xmlns:xsd="http://www.w3.org/2001/XMLSchema#"><head profile="http://www.w3.org/1999/xhtml/vocab">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -11,25 +11,25 @@
   <title>Our privacy policy | SEQ Legal</title>
   <link type="text/css" rel="stylesheet" href="http://www.seqlegal.com/sites/default/files/css/css_xE-rWrJf-fncB6ztZfd2huxqgxu4WO-qwma6Xer30m4.css" media="all">
 <link type="text/css" rel="stylesheet" href="http://www.seqlegal.com/sites/default/files/css/css_NrwLmd_Ost9j-a1nQtBu_tIKxWehV12MHAj6kNPxzN0.css" media="all">
-<link type="text/css" rel="stylesheet" href="http://www.seqlegal.com/sites/default/files/css/css_aYQUykqnRZC7L2ymwyDoePVhvXQ_qfOkxtpoLzGYSsU.css" media="all">
-<link type="text/css" rel="stylesheet" href="http://www.seqlegal.com/sites/default/files/css/css_rZvymTds0Rhvwxm1_Yx3m9D70kdRM25RZxzSc1lOLH4.css" media="all">
+<link type="text/css" rel="stylesheet" href="http://www.seqlegal.com/sites/default/files/css/css_xwkgtCrwLTWGMzUQluNOklXSBGoUjdy_8juD0zLDZK8.css" media="all">
+<link type="text/css" rel="stylesheet" href="http://www.seqlegal.com/sites/default/files/css/css_tgyHwult3dbDZ6WCFWMLeYd8gnRlsufspi49fHSYkqc.css" media="all">
 
 <!--[if IE 6]>
-<link type="text/css" rel="stylesheet" href="http://www.seqlegal.com/sites/all/themes/danland/style.ie6.css?o15pf8" media="all" />
+<link type="text/css" rel="stylesheet" href="http://www.seqlegal.com/sites/all/themes/danland/style.ie6.css?onvj2f" media="all" />
 <![endif]-->
-  <script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="http://www.seqlegal.com/sites/default/files/js/js_UWQINlriydSoeSiGQxToOUdv493zEa7dpsXC1OtYlZU.js"></script>
-<script type="text/javascript" src="http://www.seqlegal.com/sites/default/files/js/js__YrPicXZPHIucOmRNzKyV0bO4FZHeF_2-i7NLiyS2-w.js"></script>
-<script type="text/javascript" src="http://www.seqlegal.com/sites/default/files/js/js_NkdIE2Jg4Xele55M0iTXkv3x5I0BrsVml6CLAVd8xdM.js"></script>
+  <script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="http://www.seqlegal.com/sites/default/files/js/js_Xjzh1hVfcgVAixhmmB6Go8TUMPOiprA-2vkC-oWXARQ.js"></script>
+<script type="text/javascript" src="http://www.seqlegal.com/sites/default/files/js/js_IfMCH1o4K_O4ro0fwYHrd8Ci49uja6uXyqZ6ejkc3gs.js"></script>
+<script type="text/javascript" src="http://www.seqlegal.com/sites/default/files/js/js_rxjezc9L9624FptXo1YGsqv8ac9zzaMK9Le5Vw6ElTE.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 (function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,"script","//www.google-analytics.com/analytics.js","ga");ga("create", "UA-543818-15", {"cookieDomain":"auto"});ga("set", "anonymizeIp", true);ga("send", "pageview");
 //--><!]]>
 </script>
 <script type="text/javascript" src="http://www.seqlegal.com/sites/default/files/js/js_G2SFKAq42rsqEK8eyMYoLG_ENdQ63n3ATKm9h2t6jPc.js"></script>
-<script type="text/javascript" src="http://www.seqlegal.com/sites/default/files/js/js_jvjtNl_mnV_BSq61EW_FKWravqqWmqmXg5oE2yH_2ew.js"></script>
+<script type="text/javascript" src="http://www.seqlegal.com/sites/default/files/js/js__JdAmtbJRHRbMneSXaDizx6AyP_9P-tp5afRCkQSS6Y.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"danseq","theme_token":"dGh01THWvfG5Mm8NZenzwT4iuVZNntabJkQePNbL_T8","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"misc\/ajax.js":1,"sites\/all\/modules\/colorbox\/js\/colorbox.js":1,"sites\/all\/modules\/colorbox\/styles\/default\/colorbox_style.js":1,"sites\/all\/modules\/colorbox\/js\/colorbox_load.js":1,"sites\/all\/modules\/colorbox\/js\/colorbox_inline.js":1,"sites\/all\/modules\/google_analytics\/googleanalytics.js":1,"0":1,"misc\/progress.js":1,"sites\/all\/modules\/colorbox_node\/colorbox_node.js":1,"sites\/all\/themes\/danseq\/scripts\/hoverIntent.js":1,"sites\/all\/themes\/danseq\/scripts\/superfish.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"sites\/all\/modules\/colorbox_node\/colorbox_node.css":1,"modules\/comment\/comment.css":1,"modules\/field\/theme\/field.css":1,"sites\/all\/modules\/mollom\/mollom.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/views\/css\/views.css":1,"sites\/all\/modules\/colorbox\/styles\/default\/colorbox_style.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/wysiwyg_linebreaks\/wysiwyg_linebreaks.css":1,"sites\/all\/modules\/taxonomy_access\/taxonomy_access.css":1,"sites\/all\/themes\/danseq\/style.css":1,"sites\/all\/themes\/danland\/style.ie6.css":1}},"colorbox":{"transition":"elastic","speed":"350","opacity":"0.30","slideshow":false,"slideshowAuto":true,"slideshowSpeed":"2500","slideshowStart":"start slideshow","slideshowStop":"stop slideshow","current":"{current} of {total}","previous":"\u00ab Prev","next":"Next \u00bb","close":"Close","overlayClose":true,"maxWidth":"100%","maxHeight":"100%","initialWidth":"300","initialHeight":"100","fixed":true,"scrolling":true,"mobiledetect":true,"mobiledevicewidth":"480px"},"googleanalytics":{"trackOutbound":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|arc|arj|asf|asx|avi|bin|csv|doc(x|m)?|dot(x|m)?|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt(x|m)?|pot(x|m)?|pps(x|m)?|ppam|sld(x|m)?|thmx|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls(x|m|b)?|xlt(x|m)|xlam|xml|z|zip"},"urlIsAjaxTrusted":{"\/our-privacy-policy":true},"colorbox_node":{"width":"600px","height":"600px"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"danseq","theme_token":"HsjP6z-jlb1uM6SYYS8l4JqXulwkepxuA1zxbWD3_s4","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"misc\/ajax.js":1,"sites\/all\/modules\/colorbox\/js\/colorbox.js":1,"sites\/all\/modules\/colorbox\/styles\/default\/colorbox_style.js":1,"sites\/all\/modules\/colorbox\/js\/colorbox_load.js":1,"sites\/all\/modules\/colorbox\/js\/colorbox_inline.js":1,"sites\/all\/modules\/google_analytics\/googleanalytics.js":1,"0":1,"misc\/progress.js":1,"sites\/all\/modules\/colorbox_node\/colorbox_node.js":1,"sites\/all\/themes\/danseq\/scripts\/hoverIntent.js":1,"sites\/all\/themes\/danseq\/scripts\/superfish.js":1,"sites\/all\/themes\/danseq\/scripts\/custom.js":1,"sites\/all\/themes\/danseq\/scripts\/jquery.cookies.js":1,"sites\/all\/themes\/danseq\/scripts\/jquery.dcjqaccordion.2.7.min.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"sites\/all\/modules\/colorbox_node\/colorbox_node.css":1,"modules\/comment\/comment.css":1,"modules\/field\/theme\/field.css":1,"sites\/all\/modules\/mollom\/mollom.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/views\/css\/views.css":1,"sites\/all\/modules\/colorbox\/styles\/default\/colorbox_style.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/wysiwyg_linebreaks\/wysiwyg_linebreaks.css":1,"sites\/all\/modules\/taxonomy_access\/taxonomy_access.css":1,"sites\/all\/themes\/danseq\/style.css":1,"sites\/all\/themes\/danland\/style.ie6.css":1}},"colorbox":{"transition":"elastic","speed":"350","opacity":"0.30","slideshow":false,"slideshowAuto":true,"slideshowSpeed":"2500","slideshowStart":"start slideshow","slideshowStop":"stop slideshow","current":"{current} of {total}","previous":"\u00ab Prev","next":"Next \u00bb","close":"Close","overlayClose":true,"maxWidth":"100%","maxHeight":"100%","initialWidth":"300","initialHeight":"100","fixed":true,"scrolling":true,"mobiledetect":true,"mobiledevicewidth":"480px"},"googleanalytics":{"trackOutbound":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|arc|arj|asf|asx|avi|bin|csv|doc(x|m)?|dot(x|m)?|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt(x|m)?|pot(x|m)?|pps(x|m)?|ppam|sld(x|m)?|thmx|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls(x|m|b)?|xlt(x|m)|xlam|xml|z|zip","trackColorbox":1},"urlIsAjaxTrusted":{"\/our-privacy-policy":true},"colorbox_node":{"width":"600px","height":"600px"}});
 //--><!]]>
 </script>
 </head>
@@ -62,7 +62,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
   <label class="element-invisible" for="edit-search-block-form--2">Search </label>
  <input title="Enter the terms you wish to search for." type="text" id="edit-search-block-form--2" name="search_block_form" value="" size="15" maxlength="128" class="form-text">
 </div>
-<div class="form-actions form-wrapper" id="edit-actions"><input type="submit" id="edit-submit" name="op" value="Search" class="form-submit"></div><input type="hidden" name="form_build_id" value="form-wPVOqDHyRjCJ8aAJAR-eI2PYsiXO888eInksu64fs-8">
+<div class="form-actions form-wrapper" id="edit-actions"><input type="submit" id="edit-submit" name="op" value="Search" class="form-submit"></div><input type="hidden" name="form_build_id" value="form-bFakuTrs9pSBwXsy6xPkxOLRJ8iAAHROM_0BZ-_AUOY">
 <input type="hidden" name="form_id" value="search_block_form">
 </div>
 </div></form></div> <!-- end block content -->
@@ -93,20 +93,19 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 
 <div class="content">
   <ul class="menu"><li class="first leaf"><a href="/">Home</a></li>
-<li class="expanded"><a title="Services, lawyers and quotations" class="nolink">Legal services</a><ul class="menu"><li class="first leaf"><a href="/request-quote" title="Get a quote for legal services">Get a quote</a></li>
-<li class="leaf"><a href="/legal-services" title="Information about the legal services we and our partner law firms provide">Legal services</a></li>
+<li class="leaf"><a href="/request-quote" title="Get a quote for legal services">Get a quote</a></li>
+<li class="expanded"><a title="Services, lawyers and quotations" class="nolink">Legal services</a><ul class="menu"><li class="first leaf"><a href="/legal-services" title="Information about the legal services we and our partner law firms provide">Legal services</a></li>
 <li class="leaf"><a href="/law-firms" title="The law firms and other legal organisations in the SEQ Legal network">Law firms</a></li>
 <li class="leaf"><a href="/lawyers" title="The lawyers and other professionals with whom we work.">Lawyers</a></li>
 <li class="last leaf"><a href="/testimonials" title="What do our clients and customers think?">Testimonials</a></li>
 </ul></li>
 <li class="expanded"><a title="Legal templates and precedents" class="nolink">Legal templates</a><ul class="menu"><li class="first leaf"><a href="/free-legal-documents" title="Free legal notices and other templates">Free legal documents</a></li>
-<li class="last leaf"><a href="http://www.website-contracts.co.uk/website-legal-documents.html" title="Download professional legal templates.">Professional legal documents</a></li>
+<li class="leaf"><a href="http://www.website-contracts.co.uk/website-legal-documents.html" title="Download professional legal templates.">Professional legal documents</a></li>
+<li class="last leaf"><a href="https://docular.net" title="">Online document editor</a></li>
 </ul></li>
 <li class="leaf"><a href="/questions" title="Short questions and answers on legal topics">Legal Q&amp;A</a></li>
 <li class="leaf"><a href="/blog" title="Legal news and analysis">Blog</a></li>
-<li class="leaf"><a href="/testimonials" title="What do clients think of SEQ Legal?">Testimonials</a></li>
-<li class="leaf"><a href="/partners">Partners</a></li>
-<li class="last leaf"><a href="/contact-form" title="Contact SEQ Legal">Contact</a></li>
+<li class="last leaf"><a href="/testimonials" title="What do clients think of SEQ Legal?">Testimonials</a></li>
 </ul></div> <!-- end block content -->
 </div> <!-- end block -->
   </div>
@@ -166,7 +165,6 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 
 <div class="content">
   <ul class="menu"><li class="first leaf"><a href="/about" title="Learn about SEQ Legal LLP">About SEQ Legal</a></li>
-<li class="leaf"><a href="/partners" title="Join the SEQ partner programme">Partners</a></li>
 <li class="leaf"><a href="/testimonials" title="Find out what our clients and customers think about our services.">Testimonials</a></li>
 <li class="leaf"><a href="/contractalert" title="Our ContractAlert newsletter subscription form and archive">Newsletter</a></li>
 <li class="leaf"><a href="/locationmap" title="A map showing our office location">Location map</a></li>
@@ -219,10 +217,10 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
               <div class="region region-bottom-4">
     <div id="block-block-26" class="block block-block">
 
-  <h2 class="block-title">Our ecommerce website</h2>
+  <h2 class="block-title">Our ecommerce websites</h2>
 
 <div class="content">
-  <p>www.website-contracts.co.uk</p></div> <!-- end block content -->
+  <p>docular.net</p><p>www.website-contracts.co.uk</p><p>www.contractology.com</p></div> <!-- end block content -->
 </div> <!-- end block -->
   </div>
           </div>
@@ -235,7 +233,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 </div> <!-- end footer wrapper -->
 
 <div style="clear:both"></div>
-<div id="notice"><p>Copyright © 2007-2016 SEQ Legal LLP.</p></div>
+<div id="notice"><p>Copyright © 2007-2017 SEQ Legal LLP.</p></div>
 </div>  
 
 </body></html>
