bioportfolio.com (archived on 2017-08-03)
{
  "alexa_rank": 219652,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 7766,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.4,
  "homepage_snapshot_redirected_domain": "bioportfolio.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170915101019id_/http://www.bioportfolio.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170915101019id_/http%3A//bioportfolio.com",
  "interval": "2017_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "bioportfolio.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170803121037id_/http%3A//www.bioportfolio.com/info/privacy-and-cookie-policy",
  "policy_title": "BioPortfolio Privacy and Cookie Policy",
  "policy_url": "bioportfolio.com/info/privacy-and-cookie-policy",
  "sha1": "b85c33033ddba2a23b47b593e7306fd77afeefb7",
  "simhash": 14726731221238980702,
  "simhash_updated": false,
  "site_hostname": "bioportfolio.com",
  "site_url": "http://bioportfolio.com",
  "smog": 12.16,
  "strict_updated": false,
  "timestamp": "20170803121037",
  "word_count": 1313,
  "year": 2017
}

--- a/b/bi/bio/bioportfolio.com.html
+++ b/b/bi/bio/bioportfolio.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bioportfolio.com privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606214935id_/http%3A//www.bioportfolio.com/info/privacy-and-cookie-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bioportfolio.com privacy policy that was archived on 2017-08-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170803121037id_/http%3A//www.bioportfolio.com/info/privacy-and-cookie-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <title>BioPortfolio Privacy and Cookie Policy</title>
@@ -350,7 +350,7 @@
 <h1>BioPortfolio Privacy and Cookie Policy</h1>
 
 <div id="date-heading">
-17:49 EDT 6th June 2017 | <a href="/">BioPortfolio</a></div>
+08:10 EDT 3rd August 2017 | <a href="/">BioPortfolio</a></div>
 
 <nav class="show-for-medium-up">
 <div class="breadcrumb">
